tests/pass/ShiftLeftAssign.java
//package pass;
//
//public class ShiftLeftAssign {
//    public int shiftLeftAssign(int x, int y) {
//        x <<= y;
//      return x;
//    }
//}
