tests/fail/ShiftLeftAssign.java
package fail;

public class ShiftLeftAssign {
	public static void main ( String [] args ) {
		System.out.println('a' <<= 42);
	}
}
